--- a/output.html
+++ b/output.html
@@ -42,7 +42,7 @@
 	<script>
 		var LANG = "en";
 		var userScreenName = "";
-		var csrfToken = "LlyFyNN9RAXLrL6lLXglEGvEcOCR/NxlleJWmprbSUc="
+		var csrfToken = "eLXYhwdI+c8PJHGUF/CzcHij3OvbNGa3LErR5rPU5G0="
 	</script>
 	<script src="//img.atcoder.jp/public/4668327/js/utils.js"></script>
 	
@@ -161,7 +161,7 @@
 	</nav>
 
 	<form method="POST" name="form_logout" action="/logout?continue=https%3A%2F%2Fatcoder.jp%2Fcontests%2Fagc001%2Fsubmissions%3Ff.Task%3D%26f.LanguageName%3D%26f.Status%3DAC%26f.User%3Dpengzhike">
-		<input type="hidden" name="csrf_token" value="LlyFyNN9RAXLrL6lLXglEGvEcOCR/NxlleJWmprbSUc=" />
+		<input type="hidden" name="csrf_token" value="eLXYhwdI&#43;c8PJHGUF/CzcHij3OvbNGa3LErR5rPU5G0=" />
 	</form>
 	<div id="main-container" class="container"
 		 	style="padding-top:50px;">
